# Reference: https://iscinumpy.gitlab.io/post/omp-on-high-sierra
add_library(Ext::OpenMP INTERFACE IMPORTED GLOBAL)
if(APPLE AND CMAKE_C_COMPILER_ID MATCHES "Clang")
  target_compile_options(Ext::OpenMP INTERFACE "-fopenmp")
  set(OMP_LIB_NAMES "omp")
  set(OMP_LIBS)
  foreach(lib ${OMP_LIB_NAMES})
    if(EXISTS "${lib}")
      list(APPEND OMP_LIBS "${lib}")
    else()
      find_library(${lib}_LIB NAME "${lib}" PATHS "/usr/local/lib" "/usr/lib")
      message("lib:${lib};  ${lib}_LIB:${${lib}_LIB}")
      list(APPEND OMP_LIBS "${${lib}_LIB}")
    endif()
  endforeach()
  # target_link_libraries(Ext::OpenMP INTERFACE OpenMP::OpenMP_CXX)
  target_link_libraries(Ext::OpenMP INTERFACE ${OMP_LIBS})
else()
  find_package(OpenMP REQUIRED)
  target_link_libraries(Ext::OpenMP INTERFACE OpenMP::OpenMP_CXX)
endif()
set_target_properties(Ext::OpenMP PROPERTIES IMPORTED_GLOBAL TRUE)
